# secure-copypaste

./: Cargo.toml  README.md
src/: crypto_handler.rs  io_helper.rs  json_handler.rs  lib.rs  meta_structure.rs
