[package]
name = "secure-copypaste"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0.1"
dirs = "5.0.1"
rand = "0.8.5"
aes-gcm = "0.10.2"
aead = "0.5.2"
aes = "0.8.2"
pbkdf2 = "0.12.1"
sha2 = "0.10.6"
generic-array = "0.14.7"
zip = "0.6.6"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"